optimize index update